--- a/pay/pubspec.yaml
+++ b/pay/pubspec.yaml
@@ -34,7 +34,11 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  pay_android: ^1.0.11
+  pay_android:
+    git:
+      url: https://github.com/NatsuSalamada/flutter-plugin.git
+      path: pay_android
+      ref: pay-v1.1.2-implement-loading
   pay_ios: ^1.0.9
   pay_platform_interface: ^1.0.3
   meta: ^1.3.0
